Fix issue where code overflows out of spoilers

--- a/docs/src/scss/_clipboardjs.scss
+++ b/docs/src/scss/_clipboardjs.scss
@@ -38,6 +38,7 @@
 
     pre,
     code {
+      min-width: auto;
       display: block;
       position: static;
       padding: 1rem 1.2rem 0.8rem;
